@@ -29,17 +29,18 @@ MAKEOPTS="-j3"
 # USE flags (aggregative)
 USE="aac acpi alsa archive aspell bidi bluetooth bs2b cairo caps cdda
      charmap cjk consolekit cue dbus dhcp djvu dynamic eap-tls exif expat
-     fbcondecor flac fontconfig glitz grammar gtk id3tag idn irda jbig jpeg
-     jpeg2k lcms libnotify lzma mad madwifi mktemp mp3 multicall no-net2 ogg
-     opengl ots pcmcia pcsc-lite png policykit pth scsi showtabbar smartcard
-     smartspaces sndfile speex spell startup-notification staticsocket svg
-     symlink thesaurus thin-splines threads tiff tordns truetype udev
-     unicode usb v4l2 vorbis wavpack wmf X x86emu xattr xinerama xmp xv"
+     fbcondecor flac fontconfig glitz grammar groupwise gtk id3tag idn irda
+     jbig jpeg jpeg2k lcms libnotify lzma mad madwifi mktemp mp3 multicall
+     networkmanager no-net2 ogg opengl ots pcmcia pcsc-lite png policykit
+     pth qq scsi showtabbar silc smartcard smartspaces sndfile speex spell
+     startup-notification staticsocket svg symlink thesaurus thin-splines
+     threads tiff tordns truetype udev unicode usb v4l2 vorbis wavpack wmf X
+     x86emu xattr xft xinerama xmp xv"
 
 USE="${USE} -berkdb -cddb -cracklib -cups -cxx -dirac -encode -fts3 -gdbm
-     -git -http-cache -html -hunspell -live -lvm1 -mng -mudflap -perl
-     -pm-utils -python -recode -schroedinger -session -sqlite -ssl -static
-     -tcpd -tremor -xscreensaver -zeroconf"
+     -git -gstreamer -http-cache -html -hunspell -live -lvm1 -mng -mudflap
+     -perl -pm-utils -python -qt4 -recode -schroedinger -session -sqlite
+     -ssl -static -tcpd -tremor -xscreensaver -zeroconf"
 
 # X11
 INPUT_DEVICES="evdev"
