@@ -1,5 +1,7 @@
 # Applications
 =www-misc/fcgiwrap-1.0.3*
+=app-text/fbreader-0.12.10*
+=dev-libs/liblinebreak-1.2*
 
 # Firmware
 net-wireless/b43-firmware
