@@ -1,0 +1,3 @@
+#!/bin/sh
+
+exec /usr/bin/pidgin -c ${XDG_CONFIG_HOME}/purple "$@"
