@@ -1,0 +1,3 @@
+#!/bin/sh
+
+exec /usr/bin/xchat -d ${XDG_CONFIG_HOME}/xchat "$@"
