@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<config>
+  <group name="Browser">
+    <option name="command" value="midori %1 &amp;"/>
+  </group>
+</config>
