@@ -1,0 +1,10 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<config>
+  <group name="Options">
+    <option name="BookPath" value="~/persist/documents"/>
+    <option name="ScanSubdirs" value="true"/>
+  </group>
+  <group name="Web Browser">
+    <option name="Name" value="Browser"/>
+  </group>
+</config>
