@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<config>
+  <group name="Version">
+    <option name="FBReaderVersion" value="0.12.10"/>
+  </group>
+</config>
