@@ -10,3 +10,7 @@ alias du="du -ks"
 alias ..="cd .."
 
 alias mcrypt='mcrypt -c ${MCRYPTRC}'
+
+# http://lkml.org/lkml/2010/11/16/392
+cgdir=`mktemp -d --tmpdir=/sys/fs/cgroup/user cg.$$.XXXXXXXXXX` \
+    && echo $$ > ${cgdir}/tasks
