@@ -1,0 +1,5 @@
+#!/bin/sh -e
+
+if [ x"$1" != x/user ]; then
+    exec /bin/rmdir /sys/fs/cgroup"$1"
+fi
