@@ -4,9 +4,11 @@
   * Removed SYSLINUX dependency during Linux install
 
   * Kernel 2.6.36 with PLD Linux SquashFS LZMA patches
+  * Control groups assist process scheduling
   * Xorg server 1.9
   * Easy MP4[H.264+MP3] webcam video encoding
   * Easy Speex audio encoding
+  * Added FBReader, XChat, Pidgin
 
 
 2010-11-15
